# CodeJam-15

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  vercel.json
apps/backend/: Dockerfile  Dockerfile.cron  Dockerfile.prod  api.md  env.template  pyproject.toml  test_few_shot_examples.py
apps/backend/src/: cocktail_db.py  main.py  saq.py  saq_ingest.py
apps/backend/src/api/v1/: auth_routes.py  chat_routes.py  cocktail_routes.py  static_asset_routes.py
apps/backend/src/bartender/: bartender_orchestrator.py  llm_client.py  test_gemini.py
apps/backend/src/cocktaildb/: cocktail_db.py  cocktaildb_data.json
apps/backend/src/core/: config.py  dependencies.py
apps/backend/src/cron/: cocktail_db.py  saq_ingest.py
apps/backend/src/cron/supabase functions/catalog_embed/: index.ts
apps/backend/src/cron/supabase functions/saq_shizzz/: index.ts
apps/backend/src/domain/: agent_models.py  auth_models.py  chat_models.py  cocktail_models.py  static_asset_models.py
apps/backend/src/infra/: aws_client.py  cocktail_repo.py  gemini_client.py  supabase_client.py
apps/backend/src/infra/agent_core/: README.md  engine.py  factory.py  prompt.py  prototype_prompts.py  prototypes.py  rag.py
apps/backend/src/infra/agent_core/examples/: README.md  create_drink_custom_example.txt  create_drink_example.txt  create_martini_example.txt  create_old_fashioned_example.txt  search_drink_example.txt  suggest_drink_example.txt
apps/backend/src/infra/agent_core/prompt_templates/: action_generation.txt  chat_style.txt  (+4 more)
apps/backend/src/infra/cores/: prompt.py
apps/backend/src/infra/repositories/: README.md
apps/backend/src/services/: agent_service.py  auth_service.py  chat_service.py  embedding_service.py  graphic_asset_service.py
(+41 files in other folders)
