[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Arthur, the Three.js Agentic Bartender"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "python-multipart==0.0.6",
    "supabase==2.24.0",
    "python-dotenv==1.2.1",
    "google-genai==1.50.1",
    "google-generativeai==0.8.5",
    "httpx==0.28.1",
    "PyJWT==2.10.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
backend = "src.main:app"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.black]
target-version = ['py311']
line-length = 88